<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/searchActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/ic_left"
        android:onClick="onBackClick"
        android:textSize="12sp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/searchView"
        android:layout_width="377dp"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        android:hint="@string/search_hint_caption"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/startDate"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/search_hint_startDate"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView"
        android:importantForAutofill="no" />
        <!--
        android:clickable="true"
        android:focusable="false"
        android:onClick="onStartDateClick" />
        -->

    <EditText
        android:id="@+id/startTime"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/search_hint_time"
        android:inputType="time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/startDate"
        app:layout_constraintTop_toBottomOf="@+id/searchView"
        android:importantForAutofill="no" />
        <!--
        android:clickable="true"
        android:focusable="false"
        android:onClick="onStartTimeClick" />
        -->

    <EditText
        android:id="@+id/endDate"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/search_hint_endDate"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startDate"
        android:importantForAutofill="no" />
        <!--
        android:clickable="true"
        android:focusable="false"
        android:onClick="onEndDateClick" />
        -->

    <EditText
        android:id="@+id/endTime"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/search_hint_time"
        android:inputType="time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/endDate"
        app:layout_constraintTop_toBottomOf="@+id/startTime"
        android:importantForAutofill="no" />
        <!--
        android:clickable="true"
        android:focusable="false"
        android:onClick="onEndTimeClick" />
        -->

    <Button
        android:id="@+id/submitSearch"
        android:layout_width="372dp"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="onSearchClick"
        android:text="@android:string/search_go"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/endDate" />

</androidx.constraintlayout.widget.ConstraintLayout>