<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonLeft"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/ic_left"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonSearch"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="13dp"
        android:background="?actionBarItemBackground"
        android:onClick="onSearchClick"
        android:text="@string/button_search"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonRight"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/ic_right"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/timeStamp"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="160dp"
        android:text="@string/text_timestamp"
        android:textAlignment="center"
        android:textColor="@color/colorFontDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRight" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="379dp"
        android:layout_height="358dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/imageCaption"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeStamp"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <Button
        android:id="@+id/gallery"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:background="@drawable/ic_gallery"
        app:layout_constraintLeft_toLeftOf="@id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageCaption" />


    <EditText
        android:id="@+id/imageCaption"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:background="@null"
        android:drawableRight="@drawable/ic_edit"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="Image caption"
        android:imeOptions="actionDone"
        android:inputType="textPersonName"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="CAPTION"
        android:textColor="@color/colorFontDark"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/imageCaption"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/gallery"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="NotSibling" />


    <TextView
        android:id="@+id/latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="#8888"
        android:textColor="@color/colorFontWhite"
        app:layout_constraintBottom_toTopOf="@+id/longitude"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView" />

    <TextView
        android:id="@+id/longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="#8888"
        android:textColor="@color/colorFontWhite"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"/>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottom_app_bar"
            style="@style/Widget.MaterialComponents.BottomAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:backgroundTint="@color/colorHeader"
            app:fabAlignmentMode="center"
            app:fabCradleRoundedCornerRadius="8dp"
            app:fabCradleVerticalOffset="10dp">

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/bottom_nav_view"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="0dp"
                android:background="?actionBarItemBackground"
                app:labelVisibilityMode="labeled"
                app:menu="@menu/bottom_navigation"/>
        </com.google.android.material.bottomappbar.BottomAppBar>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_camera"
            android:tint="@color/colorPrimary"
            app:backgroundTint="@color/colorHeader"
            app:layout_anchor="@id/bottom_app_bar" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.constraintlayout.widget.ConstraintLayout>